--- a/style.css
+++ b/style.css
@@ -161,8 +161,16 @@ body {
 .btn-end {
     border-radius: 20px;
     padding: 10px 20px;
-    background-color: #ccc;
+    margin: 20px;
+    position: absolute;
+    bottom: 25%;
     border: none;
+    box-shadow: 0 10px 20px rgba(0,0,0,.4);
+    transform: translateY(-3px);
+}
+
+.btn-end:active {
+    transform: translateY(-1px);
 }
 
 .btn-play:hover {
@@ -174,10 +182,19 @@ body {
     transform: translateY(-1px);
 }
 
+button {
+    cursor: pointer;
+}
+
 /* GAME OVER */
 
 .end-game {
-    display: none;
+    display: grid;
+    position: relative;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+    justify-items: center;
     position: relative;
     grid-column-start: 2;
     grid-row-start: 2;
@@ -188,6 +205,11 @@ body {
     box-shadow: inset 0 0 5px;
     max-width: 900px;
     min-width: 320px;
+}
+
+.end-title {
+    font-weight: 600;
+    font-size: 2.2em;
 }
 
 .init {
